  EntityApplicationPanel.viewDependencyTree() added to View menu
  EntityDefinition.domainID added
  Entities.getDomainEntityIDs()
  Entities.getDependencyTreeModel() overloaded with a domainID parameter
  EntityTestUnit.createReferenceEntity() renamed to initializeReferenceEntity()
  EntityTestUnit.doSetUp() and doTearDown() added, empty, overridable
  EntityPanel bug fixed, activation event was bound to late, now bound during construction
  EntityEditPanel.addPropertyPanel() added, used throughout
  ConnectionPoolImpl bug fixed, creating a connection did not prevent another one from being created at the sam time
  UsageScenario.runScenario() now throws ScenarioException
  ConnectionPoolImpl bettered a bit
  ConnectionPoolStatistics.getLiveConnectionCount() renamed to getPoolSize()
  ConnectionPoolStatistics.getPoolStatistics() renamed to getFineGrainedStatistics()
  LoadTestModel, javadoc improvement
  common.* javadoc improvements
  EntityCriteriaUtil now respects the 100 max IN list items guaranteed by the JDBC standard
  Properties, EntityUtil docs added
  More javadocs added
  ValueMapImpl and ValueChangeMapImpl no longer implement Serializable
  EntityImpl and EntityImpl.KeyImpl implement writeObject and readObject (testing)
  EntityDefinitionImpl no longer implements Serializable
  EntityImpl.writeObject() and readObject() now use superclass methods to bypass validation, for the speed!
  ConnectionPoolImpl.RETRIES_BEFORE_NEW_CONNECTION added
  EntityImplTest.serialization() added
  Column moved from db to model
  RMI server now logs to {user.dir}/logs/jminor_server.log instead of {user.home}/logs/jminor.log
  LoadTestModel uses ExecutorService instead of Thread
  LoadTestModel changes rolled back, refactored a bit
  ConnectionPoolImpl improved some
  AbstractRemoteServer synchronized on connections
  Configuration now properties based, .config files added for server + monitor, Util.parseConfigurationFile() added and called by Configuration