@@ -2041,3 +2041,5 @@
   ConnectionPoolImpl improved some
   AbstractRemoteServer synchronized on connections
   Configuration now properties based, .config files added for server + monitor, Util.parseConfigurationFile() added and called by Configuration
+  TextValueLink.getLink() renamed to getValueLink
+  FormattedValueLink.FormattedValidator.updateValidityInfo() refactored
